// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) No active user. Default filter 1`] = `
<div>
  <div
    className="hidden"
    id="overlay"
    onClick={[Function]}
  />
  <div
    className="entry-index-menu"
  >
    <div
      className="the-menu items-center"
    >
      <div
        className="flex items-center"
      >
        <div
          className="main-menu hidden d-lg-flex"
        >
          <div
            className="sm-menu relative"
          />
          <div
            className="lg-menu relative"
          >
            <ul
              className="nav nav-pills nav-fill"
            >
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-trending"
                  href="/trending"
                  id="trending"
                  onClick={[Function]}
                >
                  Trending
                </a>
              </li>
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-hot active"
                  href="/hot"
                  id="hot"
                  onClick={[Function]}
                >
                  Hot
                </a>
              </li>
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-created"
                  href="/created"
                  id="created"
                  onClick={[Function]}
                >
                  New
                </a>
              </li>
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-controversial"
                  href="/controversial/today"
                  id="controversial"
                  onClick={[Function]}
                >
                  Controversial
                </a>
              </li>
            </ul>
          </div>
          <div
            className="kebab-icon"
          />
        </div>
        <div
          className="main-menu flex d-lg-none"
        >
          <div
            className="sm-menu relative"
          />
          <div
            className="lg-menu relative"
          >
            <ul
              className="nav nav-pills nav-fill"
            >
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-trending"
                  href="/trending"
                  onClick={[Function]}
                >
                  Trending
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-hot active"
                  href="/hot"
                  onClick={[Function]}
                >
                  Hot
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-created"
                  href="/created"
                  onClick={[Function]}
                >
                  New
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-controversial"
                  href="/controversial/today"
                  onClick={[Function]}
                >
                  Controversial
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="border-left ml-3 dropDown-left-border-height"
        />
        <span
          className="flex items-center pl-3"
          id="check-isGlobal"
        />
      </div>
    </div>
    <div
      className="flex items-center ml-auto ml-md-0 pl-3"
    >
      <span
        className="info-icon mr-0 mr-md-2"
        onClick={[Function]}
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M13.5,4A1.5,1.5 0 0,0 12,5.5A1.5,1.5 0 0,0 13.5,7A1.5,1.5 0 0,0 15,5.5A1.5,1.5 0 0,0 13.5,4M13.14,8.77C11.95,8.87 8.7,11.46 8.7,11.46C8.5,11.61 8.56,11.6 8.72,11.88C8.88,12.15 8.86,12.17 9.05,12.04C9.25,11.91 9.58,11.7 10.13,11.36C12.25,10 10.47,13.14 9.56,18.43C9.2,21.05 11.56,19.7 12.17,19.3C12.77,18.91 14.38,17.8 14.54,17.69C14.76,17.54 14.6,17.42 14.43,17.17C14.31,17 14.19,17.12 14.19,17.12C13.54,17.55 12.35,18.45 12.19,17.88C12,17.31 13.22,13.4 13.89,10.71C14,10.07 14.3,8.67 13.14,8.77Z"
            fill="currentColor"
          />
        </svg>
      </span>
      <div
        className="viewLayouts"
      />
    </div>
  </div>
</div>
`;

exports[`(2) No active user. Trending filter 1`] = `
<div>
  <div
    className="hidden"
    id="overlay"
    onClick={[Function]}
  />
  <div
    className="entry-index-menu"
  >
    <div
      className="the-menu items-center"
    >
      <div
        className="flex items-center"
      >
        <div
          className="main-menu hidden d-lg-flex"
        >
          <div
            className="sm-menu relative"
          />
          <div
            className="lg-menu relative"
          >
            <ul
              className="nav nav-pills nav-fill"
            >
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-trending active"
                  href="/trending"
                  id="trending"
                  onClick={[Function]}
                >
                  Trending
                </a>
              </li>
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-hot"
                  href="/hot"
                  id="hot"
                  onClick={[Function]}
                >
                  Hot
                </a>
              </li>
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-created"
                  href="/created"
                  id="created"
                  onClick={[Function]}
                >
                  New
                </a>
              </li>
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-controversial"
                  href="/controversial/today"
                  id="controversial"
                  onClick={[Function]}
                >
                  Controversial
                </a>
              </li>
            </ul>
          </div>
          <div
            className="kebab-icon"
          />
        </div>
        <div
          className="main-menu flex d-lg-none"
        >
          <div
            className="sm-menu relative"
          />
          <div
            className="lg-menu relative"
          >
            <ul
              className="nav nav-pills nav-fill"
            >
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-trending active"
                  href="/trending"
                  onClick={[Function]}
                >
                  Trending
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-hot"
                  href="/hot"
                  onClick={[Function]}
                >
                  Hot
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-created"
                  href="/created"
                  onClick={[Function]}
                >
                  New
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-controversial"
                  href="/controversial/today"
                  onClick={[Function]}
                >
                  Controversial
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="border-left ml-3 dropDown-left-border-height"
        />
        <span
          className="flex items-center pl-3"
          id="check-isGlobal"
        />
      </div>
    </div>
    <div
      className="flex items-center ml-auto ml-md-0 pl-3"
    >
      <span
        className="info-icon mr-0 mr-md-2"
        onClick={[Function]}
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M13.5,4A1.5,1.5 0 0,0 12,5.5A1.5,1.5 0 0,0 13.5,7A1.5,1.5 0 0,0 15,5.5A1.5,1.5 0 0,0 13.5,4M13.14,8.77C11.95,8.87 8.7,11.46 8.7,11.46C8.5,11.61 8.56,11.6 8.72,11.88C8.88,12.15 8.86,12.17 9.05,12.04C9.25,11.91 9.58,11.7 10.13,11.36C12.25,10 10.47,13.14 9.56,18.43C9.2,21.05 11.56,19.7 12.17,19.3C12.77,18.91 14.38,17.8 14.54,17.69C14.76,17.54 14.6,17.42 14.43,17.17C14.31,17 14.19,17.12 14.19,17.12C13.54,17.55 12.35,18.45 12.19,17.88C12,17.31 13.22,13.4 13.89,10.71C14,10.07 14.3,8.67 13.14,8.77Z"
            fill="currentColor"
          />
        </svg>
      </span>
      <div
        className="viewLayouts"
      />
    </div>
  </div>
</div>
`;

exports[`(3) Active user. Trending filter 1`] = `
<div>
  <div
    className="overlay-for-introduction"
    id="overlay"
    onClick={[Function]}
  />
  <div
    className="entry-index-menu"
  >
    <div
      className="the-menu items-center"
    >
      <div
        className="sub-menu mt-3 mt-md-0"
      >
        <ul
          className="nav nav-pills relative nav-fill flash"
        >
          <li
            className="nav-item"
          >
            <a
              className="nav-link my-link active"
              href="/@foo/feed"
              id="feed"
              onClick={[Function]}
            >
              Friends
            </a>
          </li>
          <div
            className="intro-popup p-4 p-lg-0"
            style={
              Object {
                "left": undefined,
              }
            }
          >
            <div
              className="h-full container"
            >
              <button
                className="close absolute close-btn"
                id="close-btn"
                onClick={[Function]}
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
              <div
                className="justify-center h-full items-center mt-4 mt-md-0 row"
              >
                <div
                  className="p-0 px-md-3 col-md-3 col-12"
                >
                  <img
                    className="media-intro"
                    id="media"
                    src="https://ecency.com/assets/our-vision.png"
                    width="100%"
                  />
                </div>
                <div
                  className="p-0 px-md-3 col-md-5 col-12"
                >
                  <h1
                    className="mb-2 mb-md-4 text-dark font-bold title"
                    id="title"
                  >
                    Friends
                  </h1>
                  <p
                    className="text-gray-600 paragraph mt-2 mt-md-0"
                    id="description"
                  >
                    This feed contains 
                    <span
                      className="text-capitalize"
                    >
                      Friends
                    </span>
                     discussions from people you follow. You can follow more people to fill up this feed.
                    <a
                      href="/discover"
                      onClick={[Function]}
                    >
                       
                      Discover People
                    </a>
                  </p>
                  <div
                    className="flex flex-col flex-md-row"
                  >
                    <button
                      className="mr-0 mr-md-3 w-100 w-md-50 intro-btn mb-3 mb-md-0 btn btn-outline-primary btn-lg"
                      disabled={false}
                      onClick={[Function]}
                      type="button"
                    >
                      Previous
                    </button>
                    <button
                      className="w-50 w-100 w-md-50 intro-btn btn btn-primary btn-lg"
                      disabled={false}
                      onClick={[Function]}
                      type="button"
                    >
                      Next
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </ul>
      </div>
      <div
        className="flex items-center"
      >
        <div
          className="main-menu hidden d-lg-flex"
        >
          <div
            className="sm-menu relative"
          />
          <div
            className="lg-menu relative"
          >
            <ul
              className="nav nav-pills nav-fill"
            >
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-trending"
                  href="/trending"
                  id="trending"
                  onClick={[Function]}
                >
                  Trending
                </a>
              </li>
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-hot"
                  href="/hot"
                  id="hot"
                  onClick={[Function]}
                >
                  Hot
                </a>
              </li>
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-created"
                  href="/created"
                  id="created"
                  onClick={[Function]}
                >
                  New
                </a>
              </li>
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-controversial"
                  href="/controversial/today"
                  id="controversial"
                  onClick={[Function]}
                >
                  Controversial
                </a>
              </li>
            </ul>
          </div>
          <div
            className="kebab-icon"
          />
        </div>
        <div
          className="main-menu flex d-lg-none"
        >
          <div
            className="sm-menu relative"
          >
            <div
              className="intro-popup p-4 p-lg-0"
              style={
                Object {
                  "left": undefined,
                }
              }
            >
              <div
                className="h-full container"
              >
                <button
                  className="close absolute close-btn"
                  id="close-btn"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    aria-hidden="true"
                  >
                    ×
                  </span>
                </button>
                <div
                  className="justify-center h-full items-center mt-4 mt-md-0 row"
                >
                  <div
                    className="p-0 px-md-3 col-md-3 col-12"
                  >
                    <img
                      className="media-intro"
                      id="media"
                      src="https://ecency.com/assets/our-vision.png"
                      width="100%"
                    />
                  </div>
                  <div
                    className="p-0 px-md-3 col-md-5 col-12"
                  >
                    <h1
                      className="mb-2 mb-md-4 text-dark font-bold title"
                      id="title"
                    >
                      Friends
                    </h1>
                    <p
                      className="text-gray-600 paragraph mt-2 mt-md-0"
                      id="description"
                    >
                      This feed contains 
                      <span
                        className="text-capitalize"
                      >
                        Friends
                      </span>
                       discussions from people you follow. You can follow more people to fill up this feed.
                      <a
                        href="/discover"
                        onClick={[Function]}
                      >
                         
                        Discover People
                      </a>
                    </p>
                    <div
                      className="flex flex-col flex-md-row"
                    >
                      <button
                        className="mr-0 mr-md-3 w-100 w-md-50 intro-btn mb-3 mb-md-0 btn btn-outline-primary btn-lg"
                        disabled={false}
                        onClick={[Function]}
                        type="button"
                      >
                        Previous
                      </button>
                      <button
                        className="w-50 w-100 w-md-50 intro-btn btn btn-primary btn-lg"
                        disabled={false}
                        onClick={[Function]}
                        type="button"
                      >
                        Next
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="lg-menu relative"
          >
            <ul
              className="nav nav-pills nav-fill"
            >
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-feed"
                  href="/@foo/feed"
                  onClick={[Function]}
                >
                  Friends
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-trending active"
                  href="/trending"
                  onClick={[Function]}
                >
                  Trending
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-hot"
                  href="/hot"
                  onClick={[Function]}
                >
                  Hot
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-created"
                  href="/created"
                  onClick={[Function]}
                >
                  New
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-controversial"
                  href="/controversial/today"
                  onClick={[Function]}
                >
                  Controversial
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-rising"
                  href="/rising/today"
                  onClick={[Function]}
                >
                  Rising
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="border-left ml-3 dropDown-left-border-height"
        />
        <span
          className="flex items-center pl-3"
          id="check-isGlobal"
        />
      </div>
    </div>
    <div
      className="flex items-center ml-auto ml-md-0 pl-3"
    >
      <span
        className="info-icon mr-0 mr-md-2"
        onClick={[Function]}
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M13.5,4A1.5,1.5 0 0,0 12,5.5A1.5,1.5 0 0,0 13.5,7A1.5,1.5 0 0,0 15,5.5A1.5,1.5 0 0,0 13.5,4M13.14,8.77C11.95,8.87 8.7,11.46 8.7,11.46C8.5,11.61 8.56,11.6 8.72,11.88C8.88,12.15 8.86,12.17 9.05,12.04C9.25,11.91 9.58,11.7 10.13,11.36C12.25,10 10.47,13.14 9.56,18.43C9.2,21.05 11.56,19.7 12.17,19.3C12.77,18.91 14.38,17.8 14.54,17.69C14.76,17.54 14.6,17.42 14.43,17.17C14.31,17 14.19,17.12 14.19,17.12C13.54,17.55 12.35,18.45 12.19,17.88C12,17.31 13.22,13.4 13.89,10.71C14,10.07 14.3,8.67 13.14,8.77Z"
            fill="currentColor"
          />
        </svg>
      </span>
      <div
        className="viewLayouts"
      />
    </div>
  </div>
</div>
`;

exports[`(4) Active user. Friends 1`] = `
<div>
  <div
    className="hidden"
    id="overlay"
    onClick={[Function]}
  />
  <div
    className="entry-index-menu"
  >
    <div
      className="the-menu items-center"
    >
      <div
        className="sub-menu mt-3 mt-md-0"
      >
        <ul
          className="nav nav-pills relative nav-fill "
        >
          <li
            className="nav-item"
          >
            <a
              className="nav-link my-link active"
              href="/@foo/feed"
              id="feed"
              onClick={[Function]}
            >
              Friends
            </a>
          </li>
        </ul>
      </div>
      <div
        className="flex items-center"
      >
        <div
          className="main-menu hidden d-lg-flex"
        >
          <div
            className="sm-menu relative"
          />
          <div
            className="lg-menu relative"
          >
            <ul
              className="nav nav-pills nav-fill"
            >
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-trending"
                  href="/trending"
                  id="trending"
                  onClick={[Function]}
                >
                  Trending
                </a>
              </li>
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-hot"
                  href="/hot"
                  id="hot"
                  onClick={[Function]}
                >
                  Hot
                </a>
              </li>
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-created"
                  href="/created"
                  id="created"
                  onClick={[Function]}
                >
                  New
                </a>
              </li>
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-controversial"
                  href="/controversial/today"
                  id="controversial"
                  onClick={[Function]}
                >
                  Controversial
                </a>
              </li>
            </ul>
          </div>
          <div
            className="kebab-icon"
          />
        </div>
        <div
          className="main-menu flex d-lg-none"
        >
          <div
            className="sm-menu relative"
          />
          <div
            className="lg-menu relative"
          >
            <ul
              className="nav nav-pills nav-fill"
            >
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-feed active"
                  href="/@foo/feed"
                  onClick={[Function]}
                >
                  Friends
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-trending"
                  href="/trending"
                  onClick={[Function]}
                >
                  Trending
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-hot"
                  href="/hot"
                  onClick={[Function]}
                >
                  Hot
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-created"
                  href="/created"
                  onClick={[Function]}
                >
                  New
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-controversial"
                  href="/controversial/today"
                  onClick={[Function]}
                >
                  Controversial
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-rising"
                  href="/rising/today"
                  onClick={[Function]}
                >
                  Rising
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="border-left ml-3 dropDown-left-border-height"
        />
        <span
          className="flex items-center pl-3"
          id="check-isGlobal"
        />
      </div>
    </div>
    <div
      className="flex items-center ml-auto ml-md-0 pl-3"
    >
      <span
        className="info-icon mr-0 mr-md-2"
        onClick={[Function]}
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M13.5,4A1.5,1.5 0 0,0 12,5.5A1.5,1.5 0 0,0 13.5,7A1.5,1.5 0 0,0 15,5.5A1.5,1.5 0 0,0 13.5,4M13.14,8.77C11.95,8.87 8.7,11.46 8.7,11.46C8.5,11.61 8.56,11.6 8.72,11.88C8.88,12.15 8.86,12.17 9.05,12.04C9.25,11.91 9.58,11.7 10.13,11.36C12.25,10 10.47,13.14 9.56,18.43C9.2,21.05 11.56,19.7 12.17,19.3C12.77,18.91 14.38,17.8 14.54,17.69C14.76,17.54 14.6,17.42 14.43,17.17C14.31,17 14.19,17.12 14.19,17.12C13.54,17.55 12.35,18.45 12.19,17.88C12,17.31 13.22,13.4 13.89,10.71C14,10.07 14.3,8.67 13.14,8.77Z"
            fill="currentColor"
          />
        </svg>
      </span>
      <div
        className="viewLayouts"
      />
    </div>
  </div>
</div>
`;

exports[`(5) Active user. Communities 1`] = `
<div>
  <div
    className="hidden"
    id="overlay"
    onClick={[Function]}
  />
  <div
    className="entry-index-menu"
  >
    <div
      className="the-menu items-center"
    >
      <div
        className="sub-menu mt-3 mt-md-0"
      >
        <ul
          className="nav nav-pills relative nav-fill "
        >
          <li
            className="nav-item"
          >
            <a
              className="nav-link my-link"
              href="/@foo/feed"
              id="feed"
              onClick={[Function]}
            >
              Friends
            </a>
          </li>
        </ul>
      </div>
      <div
        className="flex items-center"
      >
        <div
          className="main-menu hidden d-lg-flex"
        >
          <div
            className="sm-menu relative"
          />
          <div
            className="lg-menu relative"
          >
            <ul
              className="nav nav-pills nav-fill"
            >
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-trending active"
                  href="/trending/my"
                  id="trending"
                  onClick={[Function]}
                >
                  Trending
                </a>
              </li>
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-hot"
                  href="/hot/my"
                  id="hot"
                  onClick={[Function]}
                >
                  Hot
                </a>
              </li>
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-created"
                  href="/created/my"
                  id="created"
                  onClick={[Function]}
                >
                  New
                </a>
              </li>
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-controversial"
                  href="/controversial/today"
                  id="controversial"
                  onClick={[Function]}
                >
                  Controversial
                </a>
              </li>
            </ul>
          </div>
          <div
            className="kebab-icon"
          />
        </div>
        <div
          className="main-menu flex d-lg-none"
        >
          <div
            className="sm-menu relative"
          />
          <div
            className="lg-menu relative"
          >
            <ul
              className="nav nav-pills nav-fill"
            >
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-feed"
                  href="/@foo/feed"
                  onClick={[Function]}
                >
                  Friends
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-trending active"
                  href="/trending/my"
                  onClick={[Function]}
                >
                  Trending
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-hot"
                  href="/hot/my"
                  onClick={[Function]}
                >
                  Hot
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-created"
                  href="/created/my"
                  onClick={[Function]}
                >
                  New
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-controversial"
                  href="/controversial/today"
                  onClick={[Function]}
                >
                  Controversial
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-rising"
                  href="/rising/today"
                  onClick={[Function]}
                >
                  Rising
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="border-left ml-3 dropDown-left-border-height"
        />
        <span
          className="flex items-center pl-3"
          id="check-isGlobal"
        />
      </div>
    </div>
    <div
      className="flex items-center ml-auto ml-md-0 pl-3"
    >
      <span
        className="info-icon mr-0 mr-md-2"
        onClick={[Function]}
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M13.5,4A1.5,1.5 0 0,0 12,5.5A1.5,1.5 0 0,0 13.5,7A1.5,1.5 0 0,0 15,5.5A1.5,1.5 0 0,0 13.5,4M13.14,8.77C11.95,8.87 8.7,11.46 8.7,11.46C8.5,11.61 8.56,11.6 8.72,11.88C8.88,12.15 8.86,12.17 9.05,12.04C9.25,11.91 9.58,11.7 10.13,11.36C12.25,10 10.47,13.14 9.56,18.43C9.2,21.05 11.56,19.7 12.17,19.3C12.77,18.91 14.38,17.8 14.54,17.69C14.76,17.54 14.6,17.42 14.43,17.17C14.31,17 14.19,17.12 14.19,17.12C13.54,17.55 12.35,18.45 12.19,17.88C12,17.31 13.22,13.4 13.89,10.71C14,10.07 14.3,8.67 13.14,8.77Z"
            fill="currentColor"
          />
        </svg>
      </span>
      <div
        className="viewLayouts"
      />
    </div>
  </div>
</div>
`;

exports[`(6) No active user. Communities 1`] = `
<div>
  <div
    className="hidden"
    id="overlay"
    onClick={[Function]}
  />
  <div
    className="entry-index-menu"
  >
    <div
      className="the-menu items-center"
    >
      <div
        className="flex items-center"
      >
        <div
          className="main-menu hidden d-lg-flex"
        >
          <div
            className="sm-menu relative"
          />
          <div
            className="lg-menu relative"
          >
            <ul
              className="nav nav-pills nav-fill"
            >
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-trending active"
                  href="/trending/my"
                  id="trending"
                  onClick={[Function]}
                >
                  Trending
                </a>
              </li>
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-hot"
                  href="/hot/my"
                  id="hot"
                  onClick={[Function]}
                >
                  Hot
                </a>
              </li>
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-created"
                  href="/created/my"
                  id="created"
                  onClick={[Function]}
                >
                  New
                </a>
              </li>
              <li
                className="nav-item "
              >
                <a
                  className="nav-link link-controversial"
                  href="/controversial/today"
                  id="controversial"
                  onClick={[Function]}
                >
                  Controversial
                </a>
              </li>
            </ul>
          </div>
          <div
            className="kebab-icon"
          />
        </div>
        <div
          className="main-menu flex d-lg-none"
        >
          <div
            className="sm-menu relative"
          />
          <div
            className="lg-menu relative"
          >
            <ul
              className="nav nav-pills nav-fill"
            >
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-trending active"
                  href="/trending/my"
                  onClick={[Function]}
                >
                  Trending
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-hot"
                  href="/hot/my"
                  onClick={[Function]}
                >
                  Hot
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-created"
                  href="/created/my"
                  onClick={[Function]}
                >
                  New
                </a>
              </li>
              <li
                className="nav-item"
              >
                <a
                  className="nav-link link-controversial"
                  href="/controversial/today"
                  onClick={[Function]}
                >
                  Controversial
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="border-left ml-3 dropDown-left-border-height"
        />
        <span
          className="flex items-center pl-3"
          id="check-isGlobal"
        />
      </div>
    </div>
    <div
      className="flex items-center ml-auto ml-md-0 pl-3"
    >
      <span
        className="info-icon mr-0 mr-md-2"
        onClick={[Function]}
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M13.5,4A1.5,1.5 0 0,0 12,5.5A1.5,1.5 0 0,0 13.5,7A1.5,1.5 0 0,0 15,5.5A1.5,1.5 0 0,0 13.5,4M13.14,8.77C11.95,8.87 8.7,11.46 8.7,11.46C8.5,11.61 8.56,11.6 8.72,11.88C8.88,12.15 8.86,12.17 9.05,12.04C9.25,11.91 9.58,11.7 10.13,11.36C12.25,10 10.47,13.14 9.56,18.43C9.2,21.05 11.56,19.7 12.17,19.3C12.77,18.91 14.38,17.8 14.54,17.69C14.76,17.54 14.6,17.42 14.43,17.17C14.31,17 14.19,17.12 14.19,17.12C13.54,17.55 12.35,18.45 12.19,17.88C12,17.31 13.22,13.4 13.89,10.71C14,10.07 14.3,8.67 13.14,8.77Z"
            fill="currentColor"
          />
        </svg>
      </span>
      <div
        className="viewLayouts"
      />
    </div>
  </div>
</div>
`;
